Fix all types of cta buttons overflow
Fix all types of cta buttons overflow

--- a/webplugin/css/app/km-rich-message.css
+++ b/webplugin/css/app/km-rich-message.css
@@ -367,7 +367,12 @@
     font-size: 14px;
     letter-spacing: normal;
 }
-
+.km-cta-button-many,
+.km-quick-rpy-btn,
+.km-cta-button {
+    word-break: break-word;
+    text-align: left;
+}
 .km-cta-multi-button-container .km-cta-button-many,
 .km-cta-multi-button-container .km-cta-button-1 {
     margin-top: 10px;
@@ -1235,8 +1240,6 @@
     font-size: 14px;
     border: 1px solid;
     background-color: white;
-    word-break: break-word;
-    text-align: left;
 }
 .km-cta-multi-button-container button.km-cta-button {
     font-size: 14px;
